<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>org.thingsboard.trendz</groupId>
	<artifactId>solution-template-generator</artifactId>
	<version>1.0</version>
	<name>solution-template-generator</name>
	<description>Solution template generator for Trendz Analytics</description>

	<properties>
		<java.version>11</java.version>
		<tb.version>3.4.4-SNAPSHOT</tb.version>
		<spring.boot.version>3.0.1</spring.boot.version>
		<jwt.version>4.2.1</jwt.version>
		<guava.version>31.1-jre</guava.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.thingsboard.common</groupId>
			<artifactId>data</artifactId>
			<version>${tb.version}</version>
		</dependency>
		<dependency>
			<groupId>org.thingsboard.rule-engine</groupId>
			<artifactId>rule-engine-components</artifactId>
			<version>${tb.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring.boot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>${spring.boot.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.auth0</groupId>
			<artifactId>java-jwt</artifactId>
			<version>${jwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.sh0nk</groupId>
			<artifactId>matplotlib4j</artifactId>
			<version>0.5.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
